--- a/META.yml
+++ b/META.yml
@@ -30,7 +30,5 @@ requires:
   Dist::Zilla::Plugin::Test::Compile: 2.033
   Dist::Zilla::Plugin::Test::Rinci: 0.01
   Pod::Weaver::Plugin::Perinci: 0
-resources:
-  homepage: http://search.cpan.org/dist/Dist-Zilla-PluginBundle-Author-SHARYANTO/
-  repository: http://github.com/sharyanto/perl-Dist-Zilla-PluginBundle-Author-SHARYANTO
-version: 0.10
+resources: {}
+version: 0.11
