--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,9 @@
-version=0.11
+version=0.12
 
 name=Dist-Zilla-PluginBundle-Author-SHARYANTO
 author=Steven Haryanto <stevenharyanto@gmail.com>
 license=Perl_5
 copyright_holder=Steven Haryanto
-
-[MetaResources]
-
-
 
 [@Author::SHARYANTO]
 :version=0.09
@@ -16,7 +12,11 @@ copyright_holder=Steven Haryanto
 ;!lint-prereqs assume-used # blanket statement unrecognized by scan_prereqs
 Dist::Zilla=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
+Dist::Zilla::Plugin::Author::SHARYANTO::MetaResources=0
+;!lint-prereqs assume-used # undetected by scan_prereqs
 Dist::Zilla::Plugin::CheckChangeLog=0
+;!lint-prereqs assume-used # undetected by scan_prereqs
+Dist::Zilla::Plugin::CheckMetaResources=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
 Dist::Zilla::Plugin::InstallRelease=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
