--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.13
+version=0.14
 
 name=Dist-Zilla-PluginBundle-Author-SHARYANTO
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -21,6 +21,8 @@ Dist::Zilla::Plugin::CheckChangeLog=0
 Dist::Zilla::Plugin::CheckMetaResources=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
 Dist::Zilla::Plugin::InstallRelease=0
+;!lint-prereqs assume-used # undetected by scan_prereqs
+Dist::Zilla::Plugin::LogBuild=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
 Dist::Zilla::Plugin::OurPkgVersion=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
