--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.15
+version=0.16
 
 name=Dist-Zilla-PluginBundle-Author-SHARYANTO
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -22,7 +22,7 @@ Dist::Zilla::Plugin::CheckMetaResources=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
 Dist::Zilla::Plugin::InstallRelease=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
-Dist::Zilla::Plugin::LogBuild=0
+Dist::Zilla::Plugin::MetaConfig::PodWeaver=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
 Dist::Zilla::Plugin::OurPkgVersion=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
