Import of SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.18 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-Author-SHARYANTO
gitpan-cpan-version:      0.18
gitpan-cpan-path:         SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.18.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.17
+version=0.18
 
 name=Dist-Zilla-PluginBundle-Author-SHARYANTO
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -9,6 +9,8 @@ copyright_holder=Steven Haryanto
 :version=0.09
 
 [Prereqs]
+;!lint-prereqs assume-used # undetected by scan_prereqs
+App::ExecIf=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
 App::norepeat=0
 ;!lint-prereqs assume-used # blanket statement unrecognized by scan_prereqs
