--- a/META.yml
+++ b/META.yml
@@ -10,13 +10,14 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300038, CPAN::Meta::Converter version 2.132510'
+generated_by: 'Dist::Zilla version 5.006, CPAN::Meta::Converter version 2.132830'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Dist-Zilla-PluginBundle-Author-SHARYANTO
 requires:
+  App::ExecIf: 0
   App::norepeat: 0
   Dist::Zilla: 0
   Dist::Zilla::Plugin::Author::SHARYANTO::MetaResources: 0
@@ -36,258 +37,4 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Dist-Zilla-PluginBundle-Author-SHARYANTO
   homepage: https://metacpan.org/release/Dist-Zilla-PluginBundle-Author-SHARYANTO
   repository: git://github.com/sharyanto/perl-Dist-Zilla-PluginBundle-Author-SHARYANTO.git
-version: 0.17
-x_Dist_Zilla:
-  perl:
-    version: 5.010001
-  plugins:
-    -
-      class: Dist::Zilla::Plugin::GatherDir
-      name: '@Author::SHARYANTO/@Filter/GatherDir'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::PruneCruft
-      name: '@Author::SHARYANTO/@Filter/PruneCruft'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::ManifestSkip
-      name: '@Author::SHARYANTO/@Filter/ManifestSkip'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::MetaYAML
-      name: '@Author::SHARYANTO/@Filter/MetaYAML'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::License
-      name: '@Author::SHARYANTO/@Filter/License'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::PodCoverageTests
-      name: '@Author::SHARYANTO/@Filter/PodCoverageTests'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::PodSyntaxTests
-      name: '@Author::SHARYANTO/@Filter/PodSyntaxTests'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::ExtraTests
-      name: '@Author::SHARYANTO/@Filter/ExtraTests'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::ExecDir
-      name: '@Author::SHARYANTO/@Filter/ExecDir'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::ShareDir
-      name: '@Author::SHARYANTO/@Filter/ShareDir'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::MakeMaker
-      name: '@Author::SHARYANTO/@Filter/MakeMaker'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::Manifest
-      name: '@Author::SHARYANTO/@Filter/Manifest'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::ConfirmRelease
-      name: '@Author::SHARYANTO/@Filter/ConfirmRelease'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::UploadToCPAN
-      name: '@Author::SHARYANTO/@Filter/UploadToCPAN'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::Author::SHARYANTO::MetaResources
-      name: '@Author::SHARYANTO/Author::SHARYANTO::MetaResources'
-      version: 0.01
-    -
-      class: Dist::Zilla::Plugin::CheckChangeLog
-      name: '@Author::SHARYANTO/CheckChangeLog'
-      version: 0.01
-    -
-      class: Dist::Zilla::Plugin::CheckMetaResources
-      name: '@Author::SHARYANTO/CheckMetaResources'
-      version: 0.001
-    -
-      class: Dist::Zilla::Plugin::MetaJSON
-      name: '@Author::SHARYANTO/MetaJSON'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::MetaConfig
-      name: '@Author::SHARYANTO/MetaConfig'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::MetaConfig::PodWeaver
-      config:
-        plugins:
-          -
-            class: Pod::Weaver::Plugin::EnsurePod5
-            name: '@CorePrep/EnsurePod5'
-            version: 4.004
-          -
-            class: Pod::Weaver::Plugin::H1Nester
-            name: '@CorePrep/H1Nester'
-            version: 4.004
-          -
-            class: Pod::Weaver::Section::Name
-            name: '@Author::SHARYANTO/Name'
-            version: 4.004
-          -
-            class: Pod::Weaver::Section::Version
-            name: '@Author::SHARYANTO/Version'
-            version: 4.004
-          -
-            class: Pod::Weaver::Section::Region
-            name: '@Author::SHARYANTO/prelude'
-            version: 4.004
-          -
-            class: Pod::Weaver::Section::Generic
-            name: SYNOPSIS
-            version: 4.004
-          -
-            class: Pod::Weaver::Section::Generic
-            name: DESCRIPTION
-            version: 4.004
-          -
-            class: Pod::Weaver::Section::Generic
-            name: OVERVIEW
-            version: 4.004
-          -
-            class: Pod::Weaver::Section::Collect
-            name: ATTRIBUTES
-            version: 4.004
-          -
-            class: Pod::Weaver::Section::Collect
-            name: METHODS
-            version: 4.004
-          -
-            class: Pod::Weaver::Section::Collect
-            name: FUNCTIONS
-            version: 4.004
-          -
-            class: Pod::Weaver::Plugin::Perinci
-            name: '@Author::SHARYANTO/Perinci'
-            version: 0.12
-          -
-            class: Pod::Weaver::Section::Leftovers
-            name: '@Author::SHARYANTO/Leftovers'
-            version: 4.004
-          -
-            class: Pod::Weaver::Section::Region
-            name: '@Author::SHARYANTO/postlude'
-            version: 4.004
-          -
-            class: Pod::Weaver::Section::Homepage::DefaultCPAN
-            name: '@Author::SHARYANTO/Homepage::DefaultCPAN'
-            version: 0.02
-          -
-            class: Pod::Weaver::Section::Source::DefaultGitHub
-            name: '@Author::SHARYANTO/Source::DefaultGitHub'
-            version: 0.04
-          -
-            class: Pod::Weaver::Section::Bugs::DefaultRT
-            name: '@Author::SHARYANTO/Bugs::DefaultRT'
-            version: 0.03
-          -
-            class: Pod::Weaver::Section::Authors
-            name: '@Author::SHARYANTO/Authors'
-            version: 4.004
-          -
-            class: Pod::Weaver::Section::Legal
-            name: '@Author::SHARYANTO/Legal'
-            version: 4.004
-          -
-            class: Pod::Weaver::Plugin::EnsureUniqueSections
-            name: '@Author::SHARYANTO/EnsureUniqueSections'
-            version: 0.121550
-          -
-            class: Pod::Weaver::Plugin::SingleEncoding
-            name: '@Author::SHARYANTO/SingleEncoding'
-            version: 4.004
-      name: '@Author::SHARYANTO/MetaConfig::PodWeaver'
-      version: 0.02
-    -
-      class: Dist::Zilla::Plugin::OurPkgVersion
-      name: '@Author::SHARYANTO/OurPkgVersion'
-      version: 0.005000
-    -
-      class: Dist::Zilla::Plugin::PodWeaver
-      name: '@Author::SHARYANTO/PodWeaver'
-      version: 3.101642
-    -
-      class: Dist::Zilla::Plugin::ReadmeFromPod
-      name: '@Author::SHARYANTO/ReadmeFromPod'
-      version: 0.18
-    -
-      class: Dist::Zilla::Plugin::Rinci::Validate
-      name: '@Author::SHARYANTO/Rinci::Validate'
-      version: 0.09
-    -
-      class: Dist::Zilla::Plugin::Test::Compile
-      config:
-        Dist::Zilla::Plugin::Test::Compile:
-          filename: t/00-compile.t
-          module_finder:
-            - ':InstallModules'
-          script_finder:
-            - ':ExecFiles'
-      name: '@Author::SHARYANTO/Test::Compile'
-      version: 2.037
-    -
-      class: Dist::Zilla::Plugin::Test::Rinci
-      name: '@Author::SHARYANTO/Test::Rinci'
-      version: 0.01
-    -
-      class: Dist::Zilla::Plugin::InstallRelease
-      name: '@Author::SHARYANTO/InstallRelease'
-      version: 0.008
-    -
-      class: Dist::Zilla::Plugin::Run::BeforeBuild
-      name: '@Author::SHARYANTO/Run::BeforeBuild'
-      version: 0.020
-    -
-      class: Dist::Zilla::Plugin::Run::Release
-      name: '@Author::SHARYANTO/Run::Release'
-      version: 0.020
-    -
-      class: Dist::Zilla::Plugin::Prereqs
-      config:
-        Dist::Zilla::Plugin::Prereqs:
-          phase: runtime
-          type: requires
-      name: Prereqs
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::Extras
-      name: 'lint-prereqs / assume-provided'
-      version: 0.01
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':InstallModules'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':IncModules'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':TestFiles'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':ExecFiles'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':ShareFiles'
-      version: 4.300038
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':MainModule'
-      version: 4.300038
-  zilla:
-    class: Dist::Zilla::Dist::Builder
-    config:
-      is_trial: 0
-    version: 4.300038
+version: 0.18
