Import of SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.21 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-Author-SHARYANTO
gitpan-cpan-version:      0.21
gitpan-cpan-path:         SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.21.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.20
+version=0.21
 
 name=Dist-Zilla-PluginBundle-Author-SHARYANTO
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -39,6 +39,9 @@ Dist::Zilla::Plugin::Test::Compile=2.033
 Dist::Zilla::Plugin::Test::Rinci=0.01
 ;!lint-prereqs assume-used # convenience, often required
 Dist::Zilla::Plugin::Extras=0
+
+;!lint-prereqs assume-used # convenience, this is actually used by my Dist-Zilla-PluginBundle-Project-* (which are based on this bundle) to inject to various DarkPANs
+OrePAN=0
 
 [Extras / lint-prereqs / assume-provided]
 ; by depending on dzil
