Import of SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.22 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-Author-SHARYANTO
gitpan-cpan-version:      0.22
gitpan-cpan-path:         SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.22.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.21
+version=0.22
 
 name=Dist-Zilla-PluginBundle-Author-SHARYANTO
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -22,7 +22,7 @@ Dist::Zilla::Plugin::CheckChangeLog=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
 Dist::Zilla::Plugin::CheckMetaResources=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
-Dist::Zilla::Plugin::OurPkgVersion=0
+Dist::Zilla::Plugin::SHARYANTO::OurPkgVersion=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
 Dist::Zilla::Plugin::PodWeaver=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
