Import of SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.26 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-Author-SHARYANTO
gitpan-cpan-version:      0.26
gitpan-cpan-path:         SHARYANTO/Dist-Zilla-PluginBundle-Author-SHARYANTO-0.26.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.25
+version=0.26
 
 name=Dist-Zilla-PluginBundle-Author-SHARYANTO
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -29,6 +29,8 @@ Dist::Zilla::Plugin::PodWeaver=0
 Dist::Zilla::Plugin::ReadmeFromPod=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
 Dist::Zilla::Plugin::Rinci::Validate=0.01
+;!lint-prereqs assume-used # undetected by scan_prereqs
+Dist::Zilla::Plugin::SetScriptShebang=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
 Dist::Zilla::Plugin::SHARYANTO::OurPkgVersion=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs
