--- a/META.yml
+++ b/META.yml
@@ -28,6 +28,7 @@ requires:
   Dist::Zilla::Plugin::ReadmeFromPod: '0'
   Dist::Zilla::Plugin::Rinci::Validate: '0.01'
   Dist::Zilla::Plugin::SHARYANTO::OurPkgVersion: '0'
+  Dist::Zilla::Plugin::SetScriptShebang: '0'
   Dist::Zilla::Plugin::TaskWeaver: '0'
   Dist::Zilla::Plugin::Test::Compile: '2.033'
   Dist::Zilla::Plugin::Test::Rinci: '0.01'
@@ -35,10 +36,10 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Dist-Zilla-PluginBundle-Author-SHARYANTO
   homepage: https://metacpan.org/release/Dist-Zilla-PluginBundle-Author-SHARYANTO
   repository: git://github.com/sharyanto/perl-Dist-Zilla-PluginBundle-Author-SHARYANTO.git
-version: '0.25'
+version: '0.26'
 x_Dist_Zilla:
   perl:
-    version: '5.018002'
+    version: '5.018001'
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
@@ -120,9 +121,9 @@ x_Dist_Zilla:
       name: '@Author::SHARYANTO/MetaConfig'
       version: '5.015'
     -
-      class: Dist::Zilla::Plugin::SHARYANTO::OurPkgVersion
-      name: '@Author::SHARYANTO/SHARYANTO::OurPkgVersion'
-      version: '0.02'
+      class: Dist::Zilla::Plugin::OurDate
+      name: '@Author::SHARYANTO/OurDate'
+      version: '0.01'
     -
       class: Dist::Zilla::Plugin::PodWeaver
       config:
@@ -178,7 +179,7 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::Perinci
               name: '@Author::SHARYANTO/Perinci'
-              version: '0.14'
+              version: '0.15'
             -
               class: Pod::Weaver::Section::Leftovers
               name: '@Author::SHARYANTO/Leftovers'
@@ -228,7 +229,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Rinci::Validate
       name: '@Author::SHARYANTO/Rinci::Validate'
-      version: '0.12'
+      version: '0.13'
+    -
+      class: Dist::Zilla::Plugin::SHARYANTO::OurPkgVersion
+      name: '@Author::SHARYANTO/SHARYANTO::OurPkgVersion'
+      version: '0.02'
     -
       class: Dist::Zilla::Plugin::Test::Compile
       config:
@@ -239,7 +244,7 @@ x_Dist_Zilla:
           script_finder:
             - ':ExecFiles'
       name: '@Author::SHARYANTO/Test::Compile'
-      version: '2.040'
+      version: '2.039'
     -
       class: Dist::Zilla::Plugin::Test::Rinci
       name: '@Author::SHARYANTO/Test::Rinci'
